# bevel

./: .env.example  .gitignore  GITHUB.md  README.md  nx.json  package.json  pnpm-lock.yaml
.github/workflows/: bevel-product.yml  native-release.yml
apps/admin/: next.config.ts  package.json  tsconfig.json
caddy/: Caddyfile
docs/: CLAIM_WORKSPACE.md  FEATURE_SETS.md  GOOGLE_OAUTH.md  NATIVE_INTEGRATIONS.md  NATIVE_RELEASE.md  PRODUCTION_API.md  PRODUCTION_AUTH.md  PRODUCTION_DNS.md  TWILIO_SMS.md
scripts/: bevel-oauth.sh  dev.sh  fill-bevel-oauth-cdp.mjs  johnny-bevel-notify.sh  services.sh  setup-google-oauth.mjs
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_core.py
services/api/src/bevel_api/: __init__.py  config.py  database.py  deps.py  main.py  seed.py
services/api/src/bevel_api/db/: __init__.py
services/api/src/bevel_api/db/models/: __init__.py  channel.py  handoff.py  message.py  tenant.py  user.py
services/api/src/bevel_api/graphql/: schema.py
services/api/src/bevel_api/lib/: __init__.py  announcements.py  fleet_messages.py  internal_auth.py  processes.py  push_tokens.py  realtime_proxy.py  tenants.py
services/api/src/bevel_api/mcp/: server.py
services/api/src/bevel_api/repositories/: __init__.py  channels.py  handoff.py  messages.py  tenants.py  users.py
services/api/src/bevel_api/routers/: announcements.py  devices.py  fleet.py  handoff.py  services.py  tenants.py  workspaces.py
services/api/tests/: test_health_import.py  test_mentions.py
(+233 files in other folders)
