[project]
name = "bevel-api"
version = "0.1.0"
description = "BEVEL control plane — FastAPI REST + Strawberry GraphQL + MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
  "pyyaml>=6.0.2",
  "python-dotenv>=1.0.1",
  "strawberry-graphql[fastapi]>=0.258.0",
  "mcp>=1.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "greenlet>=3.0.0",
]

[project.scripts]
bevel-api = "bevel_api.main:run"
bevel-mcp = "bevel_api.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bevel_api"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
